crates/graphql-schema-validation/tests/validation_errors/union_required_member.errors.txt
  × Syntax error:  --> 9:28
  │   |
  │ 9 | union AnyThing = Test | Wow!
  │   |                            ^---
  │   |
  │   = expected EOI or type_system_definition
